style.css
/* ... */
#popup {
    width: 512px;
}

.wrapper {
    padding: 0.65em;
    font-family: var(--font-face);
    color: var(--color-main-text);
}

.header {
    display: block;
    overflow: hidden;
}

#nextcloud-link::before {
    content: " ";
    width: 1rem;
    height: 1rem;
    background-size: cover;
    background-image: url("images/icon.svg");
    background-repeat: no-repeat;
    display: inline-block;
    margin-right: 0.5em;
}

#nextcloud-link {
    float: left;
    text-decoration: none;
    font-size: 1.25em;
}

#nextcloud-link span {
}

.controls {
    float: right;
}

.feed {
}

ul#articles {
    list-style: none;
    padding: 0px;
    margin: 0;
}

ul#articles li {
    border-bottom-color: var(--color-border);
    border-bottom-style: solid;
    border-bottom-width: 2px;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
}

ul#articles li:last-child {
    border-bottom: none;
    padding-bottom: 0em;
}

.article {
    display: flex;
    justify-content: space-between;
}

.title {
    font-weight: bold;
    font-size: 1.25em;
    text-decoration: none;
    color: var(--color-main-text);
}

.button {
    width: 1.25rem;
    height: 1.25rem;
    margin-left: auto;
    background-size: cover;
    background-color: unset;
    border: 2px #222 solid;
    border-radius: 4px;
}

.button:hover {
    background-color: gray;
}

.read-button {
    background-image: var(--icon-checkmark-000);
}

#reload-button {
    background-image: var(--icon-history-000);
}

/* Styles for Config-Page */

#form {
    margin: 0 auto;
    width: 600px;
    padding: 14px;
}

#form label {
    display: block;
    font-weight: bold;
    text-align: right;
    width: 200px;
    float: left;
}

#form input {
    float: left;
    font-size: 12px;
    padding: 4px 2px;
    border: solid 1px #aacfe4;
    width: 300px;
}

.site-info {
    display: flex;
    align-items: center;
}

.site-icon {
    margin-right: 0.5em;
}

.site-link {
    font-weight: normal;
    font-size: 1.1em;
    color: var(--color-main-text);
    text-decoration: none;
    margin: 0;
}
.article-age {
    font-weight: normal;
    font-size: 1.1em;
    color: var(--color-main-text);
    text-decoration: none;
    margin: 0;
}

.unread-count-text {
    margin-bottom: 0;
    border-bottom-color: var(--color-box-shadow);
    border-bottom-style: solid;
    border-bottom-width: 3px;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
}

.body-button {
    background-image: var(--icon-triangle-n-000);
}
.body-button.hide-body {
    background-image: var(--icon-triangle-s-000);
}

.body-info {
    margin-top: 3px;
    padding: 5px;
    border-style: solid;
    border-radius: 3px;
    border-width: 1px;
    border-color: var(--color-primary);
    font-size: 1em;
}
.body-info.hide-body {
    display: none;
}

.body-info img,
.body-info iframe {
    max-width: 100%;
    height: auto;
}

